Remove comment and unused code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,8 @@
             "name": "C/C++: make build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/test-c-client",
-            "args": ["192.168.0.103", "19861"],
+            "program": "${workspaceFolder}/test-c-server",
+            "args": ["0.0.0.0", "19861"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
